Fixed, text overflow on article's content (single post)

--- a/assets/styles/layouts/_posts.scss
+++ b/assets/styles/layouts/_posts.scss
@@ -67,6 +67,8 @@ main > article {
     }
 
     .summary {
+      word-break: break-all;
+      overflow: hidden;
 
       p {
 
